--- a/configs/bolt.yaml
+++ b/configs/bolt.yaml
@@ -13,7 +13,7 @@ model:
   backend: ultralytics       # only 'ultralytics' supported for now
   arch: yolov8n.pt           # model name or path to checkpoint
   imgsz: 640
-  lr: 0.00005
+  lr: 0.00008
   epochs: 20
   batch: 16
   device: null               # e.g. "cuda:0" or [0,1]
@@ -27,3 +27,24 @@ train:
 val:
   project_dir: runs/val
   name: expbolt
+
+augmentation:
+  enable: true
+  # Settings for Ultralytics backend (forwarded directly). Uncomment / edit as needed.
+  # ultralytics:
+  #   mosaic: 0.5
+  #   mixup: 0.1
+  #   hsv_h: 0.015
+  #   hsv_s: 0.7
+  #   hsv_v: 0.4
+  # Basic generic knobs (used by transformers backend via Albumentations pipeline)
+  hflip: 0.5
+  brightness: 0.2
+  contrast: 0.2
+  hue: 0.02
+  saturation: 0.2
+  scale_min: 0.9
+  scale_max: 1.1
+  rotate: 5      # set >0 to enable random rotation
+  blur: 0.0
+  cutout: 0
