--- a/configs/example.yaml
+++ b/configs/example.yaml
@@ -38,3 +38,24 @@ train:
 val:
   project_dir: runs/val
   name: exp
+
+augmentation:
+  enable: true
+  # Settings for Ultralytics backend (forwarded directly). Uncomment / edit as needed.
+  # ultralytics:
+  #   mosaic: 0.5
+  #   mixup: 0.1
+  #   hsv_h: 0.015
+  #   hsv_s: 0.7
+  #   hsv_v: 0.4
+  # Basic generic knobs (used by transformers backend via Albumentations pipeline)
+  hflip: 0.5
+  brightness: 0.2
+  contrast: 0.2
+  hue: 0.02
+  saturation: 0.2
+  scale_min: 0.9
+  scale_max: 1.1
+  rotate: 0      # set >0 to enable random rotation
+  blur: 0.0
+  cutout: 0
