--- a/configs/rusty_ret.yaml
+++ b/configs/rusty_ret.yaml
@@ -21,12 +21,12 @@ model:
 
 train:
   project_dir: runs/train
-  name: exp_rusty
+  name: exp_rusty_ret
   resume: false
 
 val:
   project_dir: runs/val
-  name: exp_rusty
+  name: exp_rusty_ret
 
 augmentation:
   enable: true
