Refactor UltralyticsBackend to remove unsupported keys and streamline extra arguments handling
- Updated `train` and `validate` methods in `UltralyticsBackend` to remove `model_overrides` from the arguments passed to the Ultralytics API.
- Consolidated the construction of `extra_args` in the `run_train` function to avoid passing unnecessary keys for non-transformers backends.
- Added a new configuration file `poker_yolos.yaml` for training and validation with the YOLOS model, including specific parameters for the model and augmentation settings.

--- a/configs/rusty.yaml
+++ b/configs/rusty.yaml
@@ -21,12 +21,12 @@ model:
 
 train:
   project_dir: runs/train
-  name: exp_rusty
+  name: exp_rusty_yolov8
   resume: false
 
 val:
   project_dir: runs/val
-  name: exp_rusty
+  name: exp_rusty_yolov8
 
 augmentation:
   enable: true
